# Rome

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dangerfile  FUNDING.yml  Gemfile  ISSUE_TEMPLATE.md  LICENSE  README.md  Rakefile  Rome.cabal  Rome.podspec  brittany.yaml  stack.yaml
.github/workflows/: main.yml
app/: Main.hs
example-engines/: google.py
integration-tests/: current-framework-engine-yml.bats  current-framework-named-engine-yml.bats  current-framework-named-yaml.bats  current-framework-named-yml.bats  current-framework-yaml.bats  current-framework-yml.bats  current-xcframework-yml.bats  dynamic-frameworks-engine-yml.bats  dynamic-frameworks-ini.bats  dynamic-frameworks-yml.bats  dynamic-frameworks.bats  engine.sh  static-frameworks-engine-yml.bats  static-frameworks-ini.bats  static-frameworks-yml.bats  static-frameworks.bats  tests.bats  xcframeworks-engine-yml.bats  xcframeworks-ini.bats  xcframeworks-yml.bats
logo/: colosseum.pxm
src/: CommandParsers.hs  Configuration.hs  Lib.hs  Types.hs  Utils.hs
src/Caches/: Common.hs
src/Caches/Bintray/: Downloading.hs  Uploading.hs
src/Caches/Local/: Downloading.hs  Probing.hs  Uploading.hs
src/Caches/S3/: Downloading.hs  Probing.hs  Uploading.hs
src/Data/: Cartfile.hs  GitRepoAvailability.hs  Romefile.hs  S3Config.hs  TargetPlatform.hs
src/Data/Carthage/: Cartfile.hs  Common.hs  TargetPlatform.hs  VersionFile.hs
src/Data/Ini/: Utils.hs
src/Engine/: Downloading.hs  Probing.hs  Uploading.hs
src/Network/: Bintray.hs
src/Network/AWS/: Utils.hs
src/Text/Parsec/: Utils.hs
src/Types/: Commands.hs  TargetPlatform.hs
src/Xcode/: DWARF.hs
tests/: Tests.hs
