name:                Rome
version:             0.1.0.0
synopsis:            An S3 cache for Carthage
description:         Please see README.md
homepage:            https://github.com/blender/Rome#readme
license:             BSD3
license-file:        LICENSE
author:              Tommaso Piazza
maintainer:          tommaso.piazza@gmail.com
copyright:           2016 Tommaso Piazza
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , aws >= 0.13
                       , parsec >= 3.1.10
                       , mtl >= 2.2.1
                       , directory >= 1.2.2
                       , containers >= 0.5
                       , conduit >=  1.2
                       , conduit-extra >= 1.1
                       , http-conduit >= 2.1
                       , text >= 1.2
                       , bytestring >= 0.10
                       , zip-archive >= 0.2
                       , resourcet >= 1.1
                       , optparse-applicative >= 0.12



  default-language:    Haskell2010

executable rome
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Rome
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.12



  default-language:    Haskell2010

test-suite Rome-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Rome
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blender/Rome
