name:                Rome
version:             0.9.0.18
synopsis:            An S3 cache for Carthage
description:         Please see README.md
homepage:            https://github.com/blender/Rome
license:             MIT
license-file:        LICENSE
author:              Tommaso Piazza
maintainer:          tommaso.piazza@gmail.com
copyright:           2016 Tommaso Piazza
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , Data.Cartfile
                       , Data.Romefile
                       , Data.TargetPlatform
                       , Data.Ini.Utils
                       , Text.Parsec.Utils

  build-depends:       base >= 4.7 && < 5
                       , amazonka >= 1.4.1
                       , amazonka-s3 >= 1.4.1
                       , lens >= 4.13
                       , parsec >= 3.1.10
                       , mtl >= 2.2.1
                       , MissingH >= 1.3
                       , directory >= 1.2.2
                       , filepath >= 1.4
                       , containers >= 0.5
                       , unordered-containers >= 0.2.7
                       , conduit >= 1.2
                       , conduit-extra >= 1.1
                       , ini >= 0.3.5
                       , split >= 0.2.1.3
                       , text >= 1.2
                       , time >= 1.5.0
                       , transformers >= 0.4
                       , bytestring >= 0.10
                       , zip-archive >= 0.2
                       , resourcet >= 1.1
                       , optparse-applicative >= 0.12



  default-language:    Haskell2010

executable rome
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Rome
                     , amazonka >= 1.4.1
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.12



  default-language:    Haskell2010

test-suite Rome-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  build-depends:       base
                     , Rome
                     , QuickCheck >= 2.8.2
                     , hspec >= 2.2.3
                     , text >= 1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blender/Rome
